# agentrove

./: .env  .gitignore  CLAUDE.md  README.md  docker-compose.test.yml  docker-compose.yml  visualize.skill
.github/workflows/: backend-checks.yml  build-sandbox.yml  desktop-release.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  permission_server.py  requirements.txt
backend/app/: constants.py  main.py
backend/app/admin/: config.py  views.py
backend/app/core/: config.py  deps.py  middleware.py  security.py  user_manager.py
backend/app/db/: types.py
backend/app/models/: types.py
backend/app/prompts/: enhance_prompt.py  generate_title.py  system_prompt.py
backend/app/services/: agent.py  chat.py  claude_agent.py  claude_folder_sync.py  claude_session_registry.py  db.py  (+22 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_agents.py  test_ai_model.py  test_attachments.py  test_auth.py  test_chat.py  test_commands.py  test_integrations.py  test_migrations.py  test_permissions.py  test_queue.py  test_scheduler.py  test_settings.py  test_skills.py  test_startup_safety.py
desktop/: entry.py  requirements.txt  run_build.mjs
docs/: coolify-installation-guide.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: visualizer-frame.html
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
sandbox/docker/: Dockerfile  build.sh
sandbox/e2b/: e2b.Dockerfile
(+304 files in other folders)
