[package]
name = "claudex-desktop"
version = "0.1.0"
description = "Claudex desktop app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["devtools"] }
tauri-plugin-updater = "2.10.0"
tauri-plugin-notification = "2.3.0"
tauri-plugin-dialog = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
dirs = "5"
tauri-plugin-store = "2.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
